# gfr

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml
patterns/: xss.json
samples/: app.js  main.py
schemas/: README.md
src/: main.rs
