[package]
name = "gfr"
version = "1.0.0"
edition = "2021"
authors = ["Krishna Agarwal <kr1shna4garwal@proton.me>"]
description = "A blazingly-fast, Rust tool for finding patterns in code, inspired by 'gf'."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kr1shna4garwal/gfr"
keywords = ["bugbountytools", "codesearch", "SAST", "tool"]
categories = ["development-tools", "command-line-utilities", "text-processing"]

[dependencies]

anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0.1"
owo-colors = "4.0.0"
termcolor = "1.4.1"
ignore = "0.4.22"
grep-matcher = "0.1.7"
grep-printer = "0.2.2"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
semver = "1.0.23"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
